--- a/app/Makefile
+++ b/app/Makefile
@@ -1,7 +1,7 @@
 .PHONY: build
 build:
-	pip install -r requirements.txt
+	pipenv install -r requirements.txt
 
 .PHONY: run
 run:
-	python app.py --port 8080 --monitor 8081
+	pipenv run python app.py --port 8080 --monitor 8081
